--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^2.0.0-beta.23",
+    "@crxjs/vite-plugin": "^2.2.0",
     "@types/chrome": "^0.1.4",
+    "@vitejs/plugin-react": "^5.0.1",
     "typescript": "^5.4.0",
     "vite": "^5.0.0"
   }
