--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,13 +5,15 @@
     "description": "Privacy-first assistant for academic and professional writing powered by local LLMs.",
     "version": "0.0.1",
   
-    "action": {
+        "action": {
       "default_title": "WriteTank",
-      "default_popup": "popup.html"
+      "default_popup": "src/popup.html"
     },
-  
+    
+    "options_page": "src/options.html",
+
     "background": {
-      "service_worker": "background.js",
+      "service_worker": "src/background.ts",
       "type": "module"
     },
   
@@ -30,15 +32,15 @@
     "content_scripts": [
       {
         "matches": ["https://www.overleaf.com/*"],
-        "js": ["content.js"],
-        "css": ["overlay.css"],
+        "js": ["src/content.ts"],
+        "css": ["src/overlay.css"],
         "run_at": "document_idle"
       }
     ],
   
     "icons": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icons/icon_1x.png",
+      "48": "icons/icon_2x.png",
+      "128": "icons/icon_3x.png"
     }
   }
